--- a/css/oasis.css
+++ b/css/oasis.css
@@ -262,11 +262,13 @@ input[type=radio]:cheched{
 
 .adds-p{
   margin-bottom: 0;
+  margin-top: 10px;
+  width: 150px;
 }
 
 input.input-adds{
   position: relative !important;
-  margin-bottom: 5px;
+/*  margin-bottom: 5px;*/
 /*  margin-right: -70px !important;*/
   
 }
@@ -281,8 +283,21 @@ td.smaller{
 }
 
 .checkbox input[type=checkbox]{
-  margin: 0;
+  margin: 0 0 5px 0;
   padding: 0;
   border-radius: 50%;
 /*  display: none;*/
+}
+
+.checkbox input[type=checkbox]:checked+label{
+  color: red !important;
+  font-size: 24px;
+}
+
+.image-socket{
+  margin: 9px 0;
+}
+
+.checkbox input#test[type=checkbox]{
+  display: none;
 }
