--- a/css/oasis.css
+++ b/css/oasis.css
@@ -99,15 +99,22 @@ header .oasis-header p {
   font-size: 25px;
   padding-left: 5px;
   font-weight: 600;
+}
+
+.icon-nav{
+  font-size: 15px;
+  vertical-align: -2px;
   
 }
+
+
 
 .highlights a{
   color: white;
 }
 
 .highlights a:hover {
-  color: #fdcc52;
+  color: #ff6600;
   text-decoration: none;
 }
 
@@ -202,7 +209,7 @@ section.image-bg2-oasis {
 section.img-bg-oasis{
   position: relative;
   width: 100%;
-  min-height: 100%;
+  height: 100%;
   background: url("../images/OASIS-Puzero-6.jpg") no-repeat  center bottom scroll;
   -webkit-background-size: cover !important;
   -moz-background-size: cover !important;
@@ -308,7 +315,22 @@ img.ventilation{
 }
 /*OASIS 2 __________________________________________________________*/
 
-section.header-oasis {
+@media (min-width: 768px) {
+  .nav-bar-oasis2 {
+    background-color: white;
+    border-color: #dfdfdf;
+  }
+  .nav-bar-oasis2 .nav > li > a,
+  .nav-bar-oasis2 .nav > li > a:focus {
+    color: black;
+  }
+  .nav-bar-oasis2 .nav > li > a:hover,
+  .nav-bar-oasis2 .nav > li > a:focus:hover {
+    color: #d55602;
+  }
+}
+
+.header-oasisII-bg {
   position: relative;
   width: 100%;
   min-height: 500px !important;
@@ -321,6 +343,17 @@ section.header-oasis {
   color: white; 
 }
 
+.nav-center{
+/*  float: ;*/
+  
+}
+
+.nav-inner{
+/*  text-align: center !important;*/
+/*  left: 0;*/
+/*  right: 0;*/
+/*  display: inline-block;*/
+}
 
 
 input[type=radio] {
@@ -422,7 +455,12 @@ td.smaller{
 
 .color-pick{
   border: none !important;
+/*  background-color: #f4f8fb !important;*/
 /*  max-height: 400px;*/
+}
+
+.thumb-color{
+  background-color: #f4f8fb !important;
 }
 
 .color-pick img{
@@ -431,7 +469,7 @@ td.smaller{
 
 
 .oasis2-cont{
-  background-color: #dfdfdf !important;
+  background-color: #f4f8fb !important;
 /*  padding: 50px 0 !important;*/
 }
 
