--- a/css/oasis.css
+++ b/css/oasis.css
@@ -146,6 +146,10 @@ header .oasis-header p {
   }
 }
 
+.carousel-oasis{
+/*  max-height: 500px;*/
+}
+
 /*content */
 
 section.content-oasis {
@@ -230,25 +234,7 @@ section.content-high {
   padding: 0;
 }
 
-label.oasis-color{
-  position: relative;
-/*  background-image: url("../images/OASIS2-SENDREQUEST.jpg");*/
-  background-size: cover;
-  height: 50px;
-  width: 50px;
-  margin-left: 10px;
-  border: solid 1px #999999;
-  border-radius: 50%;
-/*  display: inline-block;*/
-  
-}
 
-
-
-input[type=radio]:checked + label {
-    border: 2px solid #ff6600 !important;
-    position: relative;
-}
 
 
 section.home-send-request{
@@ -330,41 +316,39 @@ img.ventilation{
   }
 }
 
+section.header-section{
+  height: 600px !important;
+  padding-top: 0px ;
+}
+
 .header-oasisII-bg {
   position: relative;
   width: 100%;
-  min-height: 500px !important;
+  height: 550px !important;
 /*  overflow-y: hidden;*/
-  background: url("../images/request/SENDREQUEST2.jpg") no-repeat center scroll;
+  background: url("../images/request/SENDREQUEST2.jpg") no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+/*  background-size: 100% auto;*/
   color: white; 
 }
 
-.nav-center{
-/*  float: ;*/
-  
+.oasis-request-img{
+  max-height: 380px;
 }
 
-.nav-inner{
-/*  text-align: center !important;*/
-/*  left: 0;*/
-/*  right: 0;*/
-/*  display: inline-block;*/
+.oasis-request-adds{
+  padding-top: 0 !important;
+  margin-bottom: 0;
 }
 
-
-input[type=radio] {
-/*    display: none;*/
+.order-request{
+  margin-top: -30px !important;
+  padding: 0 0 80px 0 !important
 }
 
-input[type=radio]:cheched{
-  padding: 5px;
-  border-color: green;
-  
-}
 
 
 
@@ -391,67 +375,16 @@ input.input-adds{
   
 }
 
-#rowclick1{
-  max-width: 350px;
-  text-align: center !important;
-}
 
 td.smaller{
   width: 130px;
 }
 
-.checkbox input[type=checkbox]{
-  margin: 0 0 5px 0;
-  padding: 0;
-  border-radius: 50%;
-/*  display: none;*/
-}
-
-.checkbox input[type=checkbox]:checked+label{
-  color: red !important;
-  font-size: 24px;
-}
 
 .image-socket{
   margin: 9px 0;
 }
 
-
-
-/*bandymas checkbox*/
-
-.checkbox input#test[type=checkbox]{
-  display: none;
-}
-
-.custom-check {
-		display: inline-block;
-		width: 25px; height: 25px;
-		background: white;
-		border: 2px solid #CCCCCC;
-    border-radius: 50%;
-		font-family: 'Glyphicons Halflings';
-		font-size: 10px;
-		line-height: 1;
-    margin
-	}
-
-.custom-check::before {
-  content: "\e013";
-  background-color: #424242;
-  display: none;
-  border-radius: 50%;
-  width: 25px; height: 25px;
-  border: 2px solid #CCCCCC;
-}
-
-.checkbox input#test[type=checkbox]:checked+.custom-check::before {
-  display: block;
-  color: white;
-  background-color: #424242;
-}
-
-/*bandymo checkbox pabaiga*/
 
 .color-pick{
   border: none !important;
@@ -472,6 +405,28 @@ td.smaller{
   background-color: #f4f8fb !important;
 /*  padding: 50px 0 !important;*/
 }
+
+
+/*--------------OASIS IV--------------------------*/
+
+
+.header-oasisIV-bg {
+  position: relative;
+  width: 100%;
+  height: 550px !important;
+/*  overflow-y: hidden;*/
+  background: url("../images/request/SENDREQUEST4.jpg") no-repeat center center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+/*  background-size: 100% auto;*/
+  color: white; 
+}
+
+
+
+
 
 /*footer-------------------------*/
 
@@ -499,4 +454,15 @@ td.smaller{
 /*CONTACT FORM----------------------*/
 #success_message{
   display: none;
+}
+
+/****************Shopping Cart******************/
+
+div.cart-number{
+  max-width: 70px !important;
+  text-align: center;
+}
+
+.table-qty{
+  width: 70px;
 }
