--- a/css/oasis.css
+++ b/css/oasis.css
@@ -1,14 +1,29 @@
 @import "new-age.css";
+@import "flexslider.css";
 
 
-.nav-logo {
+..nav-logo {
   width: 75px;
   height: 31px;
   margin-top: -5px; 
   position: absolute;
 /*  height: 100%;*/
-  background: url("../images/oasis-logo2.png") no-repeat ;
+  background: url("../images/logo/oasis-logo2.png") no-repeat ;
   background-size: cover;
+}
+
+..nav2-logo {
+  width: 76px;
+  height: 33px;
+  margin-top: -5px; 
+  position: absolute;
+/*  height: 100%;*/
+  background: url("../images/logo/OASIS-LOGO-juodas.png") no-repeat left bottom ;
+  background-size: cover;
+}
+
+img.logo{
+  width: 75px;
 }
 
 .navbar-default .navbar-header .navbar-brand .nav-logo:hover,
@@ -18,6 +33,33 @@
   width: 75px;
   height: 31px;
   position: absolute;
+}
+header {
+  position: relative;
+/*  display: block;*/
+}
+
+.text-header{
+  position: absolute;
+  z-index: 999;
+  color: white;
+  width: 100%;
+  
+}
+
+.flexslider {
+  display: flex;
+  border: none;
+  height: 700px;
+  justify-content: center;
+  overflow: hidden;
+  
+}
+
+.flexslider .slides img{
+  flex: none;
+  left: 0;
+  right: 0;
 }
 
 div.header-oasis1 {
@@ -87,7 +129,7 @@ p {
 
 header .oasis-header {
   text-align: center;
-  padding: 80px 0 50px;
+  padding: 65px 0 50px;
   position: relative;
   margin-top: 0;
   
@@ -96,16 +138,17 @@ header .oasis-header {
 header .oasis-header h1 {
   margin-top: 0;
   margin-bottom: 15px;
-  font-size: 30px;
-  font-style: italic;
+  font-size: 38px;
+  
+  
 }
 
 header .oasis-header p {
-  font-style: italic;
+  
 }
 
 .btn-header{
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 .icon-head{
@@ -137,14 +180,14 @@ header .oasis-header p {
 }
 
 .header-movie {
-  margin-top: 300px;
+  margin-top: 340px;
 }
 
 
 @media (min-width: 992px)  {
   
   header .oasis-header h1 {
-    font-size: 50px;
+    font-size: 38px;
   }
   header .oasis-header p {
     font-size: 16px;
@@ -158,7 +201,23 @@ header .oasis-header p {
   p {
     font-size: 12px;
   }
+  
+
 }
+
+@media  (max-width: 991px) {
+  .weather {
+    margin-top: 0 !important;
+  }
+  .inner {
+    margin-top: -20px !important;
+  }
+  .sec-ventilation {
+    margin-bottom: 0 !important;
+  }
+}
+
+
 
 .carousel-oasis{
 /*  max-height: 500px;*/
@@ -183,7 +242,7 @@ div.image-bg-oasis {
   width: 100% !important;
   min-height: 100% !important;
 /*  overflow-y: hidden;*/
-  background: url("../images/OASIS-web2.jpg") no-repeat  center bottom scroll;
+  background: url("../images/OASIS_web2-.jpg") no-repeat  center bottom scroll;
   
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -197,7 +256,7 @@ section.image-bg1-oasis {
   width: 100%;
   min-height: 100%;
 /*  overflow-y: hidden;*/
-  background: url("../images/OASIS-web3.jpg") no-repeat  center top scroll;
+  background: url("../images/OASIS_web3-.jpg") no-repeat  center top scroll;
   
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -207,8 +266,9 @@ section.image-bg1-oasis {
 }
 
 .oasis-comment{
-  font-style: italic;
+/*  font-style: italic;*/
   font-size: 18px;
+  margin-top: 20px;
 }
 
 section.image-bg2-oasis {
@@ -216,7 +276,7 @@ section.image-bg2-oasis {
   width: 100%;
   min-height: 100%;
 /*  overflow-y: hidden;*/
-  background: url("../images/OASIS-web4.jpg") no-repeat  center top scroll;
+  background: url("../images/OASIS_web4-.jpg") no-repeat  center top scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -228,7 +288,7 @@ section.img-bg-oasis{
   position: relative;
   width: 100%;
   height: 100%;
-  background: url("../images/OASIS-Puzero-6.jpg") no-repeat  center bottom scroll;
+  background: url("../images/Galery/OASISGALLERY10.jpg") no-repeat  center bottom scroll;
   -webkit-background-size: cover !important;
   -moz-background-size: cover !important;
   -o-background-size: cover !important;
@@ -248,7 +308,9 @@ section.content-high {
   padding: 0;
 }
 
-
+.press-gallery{
+  margin-bottom: 30px;
+}
 
 
 section.home-send-request{
@@ -292,18 +354,22 @@ section.home-send-request{
   font-size: 1.2em
 }
 
-div.out{
-  height: 65vh;
+section.sec-ventilation {
+  padding-bottom: 0px ;
 }
 
-div.out .inner{
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
+.inner {
+  margin-top: 120px;
+  
 }
 
-img.ventilation{
-  padding: 0 30px;
+div.weather {
+  margin-top: 150px;
+}
+
+img.ventilation {
+  margin-top: -20px;
+  margin-bottom: -20px;
 }
 
 .press-icon img{
@@ -429,7 +495,7 @@ td.smaller{
   width: 100%;
   height: 550px !important;
 /*  overflow-y: hidden;*/
-  background: url("../images/request/SENDREQUEST4.jpg") no-repeat center center scroll;
+  background: url("../images/request/SENDREQUEST4-.jpg") no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
